Documentation: dm writecache: Render status list as list (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12730,6 +12730,7 @@
 	patches.suse/PM-domains-Ensure-genpd_debugfs_dir-exists-before-re.patch
 	patches.suse/Documentation-PM-Drop-pme_interrupt-reference.patch
 	patches.suse/thermal-tools-tmon-Include-pthread-and-time-headers-.patch
+	patches.suse/Documentation-dm-writecache-Render-status-list-as-li.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
