--- a/series.conf
+++ b/series.conf
@@ -12706,6 +12706,7 @@
 	patches.suse/arm64-dts-mt8192-Fix-idle-states-entry-method.patch
 	patches.suse/arm64-dts-mt7622-fix-BPI-R64-WPS-button.patch
 	patches.suse/arm64-tegra-Fix-SDMMC1-CD-on-P2888.patch
+	patches.suse/ARM-dts-imx7d-colibri-emmc-add-cpu1-supply.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
