--- a/series.conf
+++ b/series.conf
@@ -12680,6 +12680,7 @@
 	patches.suse/ARM-9216-1-Fix-MAX_DMA_ADDRESS-overflow.patch
 	patches.suse/edac-ghes-set-the-dimm-label-unconditionally.patch
 	patches.suse/arm64-kasan-Revert-arm64-mte-reset-the-page-tag-in-p.patch
+	patches.suse/arm64-cpufeature-Allow-different-PMU-versions-in-ID_.patch
 	patches.suse/sched-numa-Initialise-numa_migrate_retry.patch
 	patches.suse/sched-numa-Do-not-swap-tasks-between-nodes-when-spare-capacity-is-available.patch
 	patches.suse/sched-numa-Apply-imbalance-limitations-consistently.patch
