--- a/series.conf
+++ b/series.conf
@@ -12726,6 +12726,7 @@
 	patches.suse/ACPI-processor-idle-Annotate-more-functions-to-live-.patch
 	patches.suse/ACPI-APEI-Better-fix-to-avoid-spamming-the-console-w.patch
 	patches.suse/ACPI-video-Shortening-quirk-list-by-identifying-Clev.patch
+	patches.suse/Documentation-ACPI-EINJ-Fix-obsolete-example.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
