cpufreq: zynq: Fix refcount leak in zynq_get_revision (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12688,6 +12688,7 @@
 	patches.suse/sched-fair-Consider-CPU-affinity-when-allowing-NUMA-imbalance-in-find_idlest_group.patch
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omapdss_init_of.patch
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omap3xxx_prm_late_ini.patch
+	patches.suse/cpufreq-zynq-Fix-refcount-leak-in-zynq_get_revision.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
