--- a/series.conf
+++ b/series.conf
@@ -12729,6 +12729,7 @@
 	patches.suse/Documentation-ACPI-EINJ-Fix-obsolete-example.patch
 	patches.suse/PM-domains-Ensure-genpd_debugfs_dir-exists-before-re.patch
 	patches.suse/Documentation-PM-Drop-pme_interrupt-reference.patch
+	patches.suse/thermal-tools-tmon-Include-pthread-and-time-headers-.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
