--- a/series.conf
+++ b/series.conf
@@ -12701,6 +12701,7 @@
 	patches.suse/ARM-dts-ast2500-evb-fix-board-compatible.patch
 	patches.suse/ARM-dts-ast2600-evb-fix-board-compatible.patch
 	patches.suse/ARM-dts-ast2600-evb-a1-fix-board-compatible.patch
+	patches.suse/dt-bindings-gpio-zynq-Add-missing-compatible-strings.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
