crypto: hisilicon/hpre - don't use GFP_KERNEL to alloc mem during softirq (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12735,6 +12735,7 @@
 	patches.suse/crypto-sun8i-ss-fix-infinite-loop-in-sun8i_ss_setup_.patch
 	patches.suse/crypto-hisilicon-sec-don-t-sleep-when-in-softirq.patch
 	patches.suse/crypto-hisilicon-Kunpeng916-crypto-driver-don-t-slee.patch
+	patches.suse/crypto-hisilicon-hpre-don-t-use-GFP_KERNEL-to-alloc-.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
