regulator: of: Fix refcount leak bug in of_get_regulation_constraints() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12715,6 +12715,7 @@
 	patches.suse/dt-bindings-arm-qcom-fix-MSM8916-MTP-compatibles.patch
 	patches.suse/dt-bindings-arm-qcom-fix-MSM8994-boards-compatibles.patch
 	patches.suse/regulator-qcom_smd-Fix-pm8916_pldo-range.patch
+	patches.suse/regulator-of-Fix-refcount-leak-bug-in-of_get_regulat.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
