ARM: bcm: Fix refcount leak in bcm_kona_smc_init (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12689,6 +12689,7 @@
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omapdss_init_of.patch
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omap3xxx_prm_late_ini.patch
 	patches.suse/cpufreq-zynq-Fix-refcount-leak-in-zynq_get_revision.patch
+	patches.suse/ARM-bcm-Fix-refcount-leak-in-bcm_kona_smc_init.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
