ARM: dts: qcom: mdm9615: add missing PMIC GPIO reg (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12707,6 +12707,7 @@
 	patches.suse/arm64-dts-mt7622-fix-BPI-R64-WPS-button.patch
 	patches.suse/arm64-tegra-Fix-SDMMC1-CD-on-P2888.patch
 	patches.suse/ARM-dts-imx7d-colibri-emmc-add-cpu1-supply.patch
+	patches.suse/ARM-dts-qcom-mdm9615-add-missing-PMIC-GPIO-reg.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
