spi: Fix simplification of devm_spi_register_controller (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12719,6 +12719,7 @@
 	patches.suse/spi-spi-altera-dfl-Fix-an-error-handling-path.patch
 	patches.suse/spi-dt-bindings-cadence-add-missing-required.patch
 	patches.suse/spi-dt-bindings-zynqmp-qspi-add-missing-required.patch
+	patches.suse/spi-Fix-simplification-of-devm_spi_register_controll.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
