dt-bindings: arm: qcom: fix MSM8916 MTP compatibles (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12712,6 +12712,7 @@
 	patches.suse/arm64-dts-qcom-msm8916-Fix-typo-in-pronto-remoteproc.patch
 	patches.suse/arm64-dts-qcom-sm8250-add-missing-PCIe-PHY-clock-cel.patch
 	patches.suse/arm64-dts-qcom-qcs404-Fix-incorrect-USB2-PHYs-assign.patch
+	patches.suse/dt-bindings-arm-qcom-fix-MSM8916-MTP-compatibles.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
