--- a/series.conf
+++ b/series.conf
@@ -12704,6 +12704,7 @@
 	patches.suse/dt-bindings-gpio-zynq-Add-missing-compatible-strings.patch
 	patches.suse/arm64-dts-mt8192-Fix-idle-states-nodes-naming-scheme.patch
 	patches.suse/arm64-dts-mt8192-Fix-idle-states-entry-method.patch
+	patches.suse/arm64-dts-mt7622-fix-BPI-R64-WPS-button.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
