--- a/series.conf
+++ b/series.conf
@@ -12727,6 +12727,7 @@
 	patches.suse/ACPI-APEI-Better-fix-to-avoid-spamming-the-console-w.patch
 	patches.suse/ACPI-video-Shortening-quirk-list-by-identifying-Clev.patch
 	patches.suse/Documentation-ACPI-EINJ-Fix-obsolete-example.patch
+	patches.suse/PM-domains-Ensure-genpd_debugfs_dir-exists-before-re.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
