--- a/series.conf
+++ b/series.conf
@@ -12743,6 +12743,7 @@
 	patches.suse/Documentation-update-watch_queue.rst-references.patch
 	patches.suse/Documentation-siphash-Fix-typo-in-the-name-of-offset.patch
 	patches.suse/selftests-timers-valid-adjtimex-build-fix-for-newer-.patch
+	patches.suse/selftests-timers-clocksource-switch-fix-passing-erro.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
