soc: qcom: ocmem: Fix refcount leak in of_get_ocmem (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12694,6 +12694,7 @@
 	patches.suse/meson-mx-socinfo-Fix-refcount-leak-in-meson_mx_socin.patch
 	patches.suse/soc-amlogic-Fix-refcount-leak-in-meson-secure-pwrc.c.patch
 	patches.suse/soc-fsl-guts-machine-variable-might-be-unset.patch
+	patches.suse/soc-qcom-ocmem-Fix-refcount-leak-in-of_get_ocmem.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
