--- a/series.conf
+++ b/series.conf
@@ -12698,6 +12698,7 @@
 	patches.suse/soc-qcom-aoss-Fix-refcount-leak-in-qmp_cooling_devic.patch
 	patches.suse/arm64-dts-renesas-beacon-Fix-regulator-node-names.patch
 	patches.suse/arm64-dts-renesas-Fix-thermal-sensors-on-single-zone.patch
+	patches.suse/ARM-dts-ast2500-evb-fix-board-compatible.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
