ACPI: video: Shortening quirk list by identifying Clevo by board_name only (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12725,6 +12725,7 @@
 	patches.suse/bus-hisi_lpc-fix-missing-platform_device_put-in-hisi.patch
 	patches.suse/ACPI-processor-idle-Annotate-more-functions-to-live-.patch
 	patches.suse/ACPI-APEI-Better-fix-to-avoid-spamming-the-console-w.patch
+	patches.suse/ACPI-video-Shortening-quirk-list-by-identifying-Clev.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
