crypto: hisilicon/sec - don't sleep when in softirq (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12733,6 +12733,7 @@
 	patches.suse/Documentation-dm-writecache-Render-status-list-as-li.patch
 	patches.suse/selftests-seccomp-Fix-compile-warning-when-CC-clang.patch
 	patches.suse/crypto-sun8i-ss-fix-infinite-loop-in-sun8i_ss_setup_.patch
+	patches.suse/crypto-hisilicon-sec-don-t-sleep-when-in-softirq.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
