arm64: dts: mt8192: Fix idle-states nodes naming scheme (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12702,6 +12702,7 @@
 	patches.suse/ARM-dts-ast2600-evb-fix-board-compatible.patch
 	patches.suse/ARM-dts-ast2600-evb-a1-fix-board-compatible.patch
 	patches.suse/dt-bindings-gpio-zynq-Add-missing-compatible-strings.patch
+	patches.suse/arm64-dts-mt8192-Fix-idle-states-nodes-naming-scheme.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
