--- a/series.conf
+++ b/series.conf
@@ -12686,6 +12686,7 @@
 	patches.suse/sched-numa-Apply-imbalance-limitations-consistently.patch
 	patches.suse/sched-numa-Adjust-imb_numa_nr-to-a-better-approximation-of-memory-channels.patch
 	patches.suse/sched-fair-Consider-CPU-affinity-when-allowing-NUMA-imbalance-in-find_idlest_group.patch
+	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omapdss_init_of.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
