arm64: dts: qcom: sm8250: add missing PCIe PHY clock-cells (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12710,6 +12710,7 @@
 	patches.suse/ARM-dts-qcom-mdm9615-add-missing-PMIC-GPIO-reg.patch
 	patches.suse/ARM-dts-qcom-pm8841-add-required-thermal-sensor-cell.patch
 	patches.suse/arm64-dts-qcom-msm8916-Fix-typo-in-pronto-remoteproc.patch
+	patches.suse/arm64-dts-qcom-sm8250-add-missing-PCIe-PHY-clock-cel.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
