--- a/series.conf
+++ b/series.conf
@@ -12692,6 +12692,7 @@
 	patches.suse/ARM-bcm-Fix-refcount-leak-in-bcm_kona_smc_init.patch
 	patches.suse/soc-renesas-r8a779a0-sysc-Fix-A2DP1-and-A2CV-2357-PD.patch
 	patches.suse/meson-mx-socinfo-Fix-refcount-leak-in-meson_mx_socin.patch
+	patches.suse/soc-amlogic-Fix-refcount-leak-in-meson-secure-pwrc.c.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
