ACPI: processor/idle: Annotate more functions to live in cpuidle section (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12723,6 +12723,7 @@
 	patches.suse/hwmon-drivetemp-Add-module-alias.patch
 	patches.suse/ACPI-CPPC-Do-not-prevent-CPPC-from-working-in-the-fu.patch
 	patches.suse/bus-hisi_lpc-fix-missing-platform_device_put-in-hisi.patch
+	patches.suse/ACPI-processor-idle-Annotate-more-functions-to-live-.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
