--- a/series.conf
+++ b/series.conf
@@ -12700,6 +12700,7 @@
 	patches.suse/arm64-dts-renesas-Fix-thermal-sensors-on-single-zone.patch
 	patches.suse/ARM-dts-ast2500-evb-fix-board-compatible.patch
 	patches.suse/ARM-dts-ast2600-evb-fix-board-compatible.patch
+	patches.suse/ARM-dts-ast2600-evb-a1-fix-board-compatible.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
