spi: dt-bindings: cadence: add missing 'required' (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12717,6 +12717,7 @@
 	patches.suse/regulator-qcom_smd-Fix-pm8916_pldo-range.patch
 	patches.suse/regulator-of-Fix-refcount-leak-bug-in-of_get_regulat.patch
 	patches.suse/spi-spi-altera-dfl-Fix-an-error-handling-path.patch
+	patches.suse/spi-dt-bindings-cadence-add-missing-required.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
