arm64: dts: renesas: Fix thermal-sensors on single-zone sensors (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12697,6 +12697,7 @@
 	patches.suse/soc-qcom-ocmem-Fix-refcount-leak-in-of_get_ocmem.patch
 	patches.suse/soc-qcom-aoss-Fix-refcount-leak-in-qmp_cooling_devic.patch
 	patches.suse/arm64-dts-renesas-beacon-Fix-regulator-node-names.patch
+	patches.suse/arm64-dts-renesas-Fix-thermal-sensors-on-single-zone.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
