--- a/series.conf
+++ b/series.conf
@@ -12690,6 +12690,7 @@
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omap3xxx_prm_late_ini.patch
 	patches.suse/cpufreq-zynq-Fix-refcount-leak-in-zynq_get_revision.patch
 	patches.suse/ARM-bcm-Fix-refcount-leak-in-bcm_kona_smc_init.patch
+	patches.suse/soc-renesas-r8a779a0-sysc-Fix-A2DP1-and-A2CV-2357-PD.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
