--- a/series.conf
+++ b/series.conf
@@ -12720,6 +12720,7 @@
 	patches.suse/spi-dt-bindings-cadence-add-missing-required.patch
 	patches.suse/spi-dt-bindings-zynqmp-qspi-add-missing-required.patch
 	patches.suse/spi-Fix-simplification-of-devm_spi_register_controll.patch
+	patches.suse/hwmon-drivetemp-Add-module-alias.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
