--- a/series.conf
+++ b/series.conf
@@ -12696,6 +12696,7 @@
 	patches.suse/soc-fsl-guts-machine-variable-might-be-unset.patch
 	patches.suse/soc-qcom-ocmem-Fix-refcount-leak-in-of_get_ocmem.patch
 	patches.suse/soc-qcom-aoss-Fix-refcount-leak-in-qmp_cooling_devic.patch
+	patches.suse/arm64-dts-renesas-beacon-Fix-regulator-node-names.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
