regulator: qcom_smd: Fix pm8916_pldo range (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12714,6 +12714,7 @@
 	patches.suse/arm64-dts-qcom-qcs404-Fix-incorrect-USB2-PHYs-assign.patch
 	patches.suse/dt-bindings-arm-qcom-fix-MSM8916-MTP-compatibles.patch
 	patches.suse/dt-bindings-arm-qcom-fix-MSM8994-boards-compatibles.patch
+	patches.suse/regulator-qcom_smd-Fix-pm8916_pldo-range.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
