crypto: inside-secure - Add missing MODULE_DEVICE_TABLE for of (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12736,6 +12736,7 @@
 	patches.suse/crypto-hisilicon-sec-don-t-sleep-when-in-softirq.patch
 	patches.suse/crypto-hisilicon-Kunpeng916-crypto-driver-don-t-slee.patch
 	patches.suse/crypto-hisilicon-hpre-don-t-use-GFP_KERNEL-to-alloc-.patch
+	patches.suse/crypto-inside-secure-Add-missing-MODULE_DEVICE_TABLE.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
