--- a/series.conf
+++ b/series.conf
@@ -12708,6 +12708,7 @@
 	patches.suse/arm64-tegra-Fix-SDMMC1-CD-on-P2888.patch
 	patches.suse/ARM-dts-imx7d-colibri-emmc-add-cpu1-supply.patch
 	patches.suse/ARM-dts-qcom-mdm9615-add-missing-PMIC-GPIO-reg.patch
+	patches.suse/ARM-dts-qcom-pm8841-add-required-thermal-sensor-cell.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
