Documentation: update watch_queue.rst references (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12740,6 +12740,7 @@
 	patches.suse/crypto-hisilicon-sec-fix-auth-key-size-error.patch
 	patches.suse/crypto-arm64-poly1305-fix-a-read-out-of-bound.patch
 	patches.suse/docs-zh_CN-fix-a-broken-reference.patch
+	patches.suse/Documentation-update-watch_queue.rst-references.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
