--- a/series.conf
+++ b/series.conf
@@ -12731,6 +12731,7 @@
 	patches.suse/Documentation-PM-Drop-pme_interrupt-reference.patch
 	patches.suse/thermal-tools-tmon-Include-pthread-and-time-headers-.patch
 	patches.suse/Documentation-dm-writecache-Render-status-list-as-li.patch
+	patches.suse/selftests-seccomp-Fix-compile-warning-when-CC-clang.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
