bus: hisi_lpc: fix missing platform_device_put() in hisi_lpc_acpi_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12722,6 +12722,7 @@
 	patches.suse/spi-Fix-simplification-of-devm_spi_register_controll.patch
 	patches.suse/hwmon-drivetemp-Add-module-alias.patch
 	patches.suse/ACPI-CPPC-Do-not-prevent-CPPC-from-working-in-the-fu.patch
+	patches.suse/bus-hisi_lpc-fix-missing-platform_device_put-in-hisi.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
