--- a/series.conf
+++ b/series.conf
@@ -12734,6 +12734,7 @@
 	patches.suse/selftests-seccomp-Fix-compile-warning-when-CC-clang.patch
 	patches.suse/crypto-sun8i-ss-fix-infinite-loop-in-sun8i_ss_setup_.patch
 	patches.suse/crypto-hisilicon-sec-don-t-sleep-when-in-softirq.patch
+	patches.suse/crypto-hisilicon-Kunpeng916-crypto-driver-don-t-slee.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
