Documentation: siphash: Fix typo in the name of offsetofend macro (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12741,6 +12741,7 @@
 	patches.suse/crypto-arm64-poly1305-fix-a-read-out-of-bound.patch
 	patches.suse/docs-zh_CN-fix-a-broken-reference.patch
 	patches.suse/Documentation-update-watch_queue.rst-references.patch
+	patches.suse/Documentation-siphash-Fix-typo-in-the-name-of-offset.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
