--- a/series.conf
+++ b/series.conf
@@ -12732,6 +12732,7 @@
 	patches.suse/thermal-tools-tmon-Include-pthread-and-time-headers-.patch
 	patches.suse/Documentation-dm-writecache-Render-status-list-as-li.patch
 	patches.suse/selftests-seccomp-Fix-compile-warning-when-CC-clang.patch
+	patches.suse/crypto-sun8i-ss-fix-infinite-loop-in-sun8i_ss_setup_.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
