--- a/series.conf
+++ b/series.conf
@@ -12713,6 +12713,7 @@
 	patches.suse/arm64-dts-qcom-sm8250-add-missing-PCIe-PHY-clock-cel.patch
 	patches.suse/arm64-dts-qcom-qcs404-Fix-incorrect-USB2-PHYs-assign.patch
 	patches.suse/dt-bindings-arm-qcom-fix-MSM8916-MTP-compatibles.patch
+	patches.suse/dt-bindings-arm-qcom-fix-MSM8994-boards-compatibles.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
