arm64: tegra: Fix SDMMC1 CD on P2888 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12705,6 +12705,7 @@
 	patches.suse/arm64-dts-mt8192-Fix-idle-states-nodes-naming-scheme.patch
 	patches.suse/arm64-dts-mt8192-Fix-idle-states-entry-method.patch
 	patches.suse/arm64-dts-mt7622-fix-BPI-R64-WPS-button.patch
+	patches.suse/arm64-tegra-Fix-SDMMC1-CD-on-P2888.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
