--- a/series.conf
+++ b/series.conf
@@ -12716,6 +12716,7 @@
 	patches.suse/dt-bindings-arm-qcom-fix-MSM8994-boards-compatibles.patch
 	patches.suse/regulator-qcom_smd-Fix-pm8916_pldo-range.patch
 	patches.suse/regulator-of-Fix-refcount-leak-bug-in-of_get_regulat.patch
+	patches.suse/spi-spi-altera-dfl-Fix-an-error-handling-path.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
