--- a/series.conf
+++ b/series.conf
@@ -12737,6 +12737,7 @@
 	patches.suse/crypto-hisilicon-Kunpeng916-crypto-driver-don-t-slee.patch
 	patches.suse/crypto-hisilicon-hpre-don-t-use-GFP_KERNEL-to-alloc-.patch
 	patches.suse/crypto-inside-secure-Add-missing-MODULE_DEVICE_TABLE.patch
+	patches.suse/crypto-hisilicon-sec-fix-auth-key-size-error.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
