Revert "Refresh patches.suse/random-fix-crash-on-multiple-early-calls..." (bsc#1201645)
This reverts commit f01d1a85f6c5334e324db629b3d43a8be5461b46.

--- a/series.conf
+++ b/series.conf
@@ -54214,7 +54214,6 @@
 	patches.suse/random-document-add_hwgenerator_randomness-with-othe.patch
 	patches.suse/random-fix-data-race-on-crng_node_pool.patch
 	patches.suse/random-fix-data-race-on-crng-init-time.patch
-	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
 	patches.suse/drm-bridge-display-connector-fix-an-uninitialized-po.patch
 	patches.suse/drm-fix-null-ptr-deref-in-drm_dev_init_release.patch
 	patches.suse/drm-panel-kingdisplay-kd097d04-Delete-panel-on-attac.patch
@@ -56360,6 +56359,9 @@
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
 	patches.suse/powerpc-pseries-mobility-set-NMI-watchdog-factor-dur.patch
+
+	# out-of-tree patches
+	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
 
 	########################################################
 	# end of sorted patches
