blacklist.conf: add "sched: Reenable interrupts in do_sched_yield()"
This patch caused unexplained regressions and it's not fixing any
important issue.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1544,3 +1544,4 @@ b4e00444cab4c3f3fec876dc0cccc8cbb0d1a948 # improbable bug, sensitive path, bsc#1
 c92cbaea3cc0a80807e386922f801eb6d3652c81 # no such function
 36d18b5664ef617ccf4da266291d2f2342fab89d # no such code
 c95c34f01bbda4421c25fdc9b04a4a4aab10d36c # xsk: Remove dangling function declaration from header file
+345a957fcc95630bf5535d7668a59ed983eb49a7 # caused unexplained issue
