docs/kernel-parameters: Update descriptions for "mitigations=" param with retbleed (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12682,6 +12682,7 @@
 	patches.suse/nouveau-svm-Fix-to-migrate-all-requested-pages.patch
 	patches.suse/ARM-9216-1-Fix-MAX_DMA_ADDRESS-overflow.patch
 	patches.suse/edac-ghes-set-the-dimm-label-unconditionally.patch
+	patches.suse/docs-kernel-parameters-Update-descriptions-for-mitig.patch
 	patches.suse/arm64-kasan-Revert-arm64-mte-reset-the-page-tag-in-p.patch
 	patches.suse/arm64-cpufeature-Allow-different-PMU-versions-in-ID_.patch
 	patches.suse/sched-numa-Initialise-numa_migrate_retry.patch
