can: netlink: allow configuring of fixed bit rates without need for do_set_bittiming callback (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12748,6 +12748,7 @@
 	patches.suse/Documentation-siphash-Fix-typo-in-the-name-of-offset.patch
 	patches.suse/selftests-timers-valid-adjtimex-build-fix-for-newer-.patch
 	patches.suse/selftests-timers-clocksource-switch-fix-passing-erro.patch
+	patches.suse/can-netlink-allow-configuring-of-fixed-bit-rates-wit.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
