ath10k: do not enforce interrupt trigger type (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12751,6 +12751,7 @@
 	patches.suse/can-netlink-allow-configuring-of-fixed-bit-rates-wit.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
 	patches.suse/can-netlink-allow-configuring-of-fixed-data-bit-rate.patch
+	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
