--- a/series.conf
+++ b/series.conf
@@ -12752,6 +12752,7 @@
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
 	patches.suse/can-netlink-allow-configuring-of-fixed-data-bit-rate.patch
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
+	patches.suse/ath11k-fix-netdev-open-race.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
