--- a/series.conf
+++ b/series.conf
@@ -12760,6 +12760,7 @@
 	patches.suse/can-hi311x-do-not-report-txerr-and-rxerr-during-bus-.patch
 	patches.suse/can-sun4i_can-do-not-report-txerr-and-rxerr-during-b.patch
 	patches.suse/can-kvaser_usb_hydra-do-not-report-txerr-and-rxerr-d.patch
+	patches.suse/can-kvaser_usb_leaf-do-not-report-txerr-and-rxerr-du.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
