--- a/series.conf
+++ b/series.conf
@@ -12754,6 +12754,7 @@
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
 	patches.suse/ath11k-fix-netdev-open-race.patch
 	patches.suse/ath11k-Fix-incorrect-debug_mask-mappings.patch
+	patches.suse/can-pch_can-do-not-report-txerr-and-rxerr-during-bus.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
