--- a/series.conf
+++ b/series.conf
@@ -12678,6 +12678,7 @@
 	patches.suse/macsec-fix-error-message-in-macsec_add_rxsa-and-_txs.patch
 	patches.suse/macsec-limit-replay-window-size-with-XPN.patch
 	patches.suse/macsec-always-read-MACSEC_SA_ATTR_PN-as-a-u64.patch
+	patches.suse/Bluetooth-L2CAP-Fix-use-after-free-caused-by-l2cap_c.patch
 	patches.suse/nouveau-svm-Fix-to-migrate-all-requested-pages.patch
 	patches.suse/ARM-9216-1-Fix-MAX_DMA_ADDRESS-overflow.patch
 	patches.suse/edac-ghes-set-the-dimm-label-unconditionally.patch
