--- a/series.conf
+++ b/series.conf
@@ -12762,6 +12762,7 @@
 	patches.suse/can-kvaser_usb_hydra-do-not-report-txerr-and-rxerr-d.patch
 	patches.suse/can-kvaser_usb_leaf-do-not-report-txerr-and-rxerr-du.patch
 	patches.suse/can-usb_8dev-do-not-report-txerr-and-rxerr-during-bu.patch
+	patches.suse/can-error-specify-the-values-of-data-5.7-of-CAN-erro.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
