ath11k: Fix incorrect debug_mask mappings (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12753,6 +12753,7 @@
 	patches.suse/can-netlink-allow-configuring-of-fixed-data-bit-rate.patch
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
 	patches.suse/ath11k-fix-netdev-open-race.patch
+	patches.suse/ath11k-Fix-incorrect-debug_mask-mappings.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
