can: netlink: allow configuring of fixed data bit rates without need for do_set_data_bittiming callback (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12750,6 +12750,7 @@
 	patches.suse/selftests-timers-clocksource-switch-fix-passing-erro.patch
 	patches.suse/can-netlink-allow-configuring-of-fixed-bit-rates-wit.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
+	patches.suse/can-netlink-allow-configuring-of-fixed-data-bit-rate.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
