--- a/series.conf
+++ b/series.conf
@@ -12757,6 +12757,7 @@
 	patches.suse/can-pch_can-do-not-report-txerr-and-rxerr-during-bus.patch
 	patches.suse/can-rcar_can-do-not-report-txerr-and-rxerr-during-bu.patch
 	patches.suse/can-sja1000-do-not-report-txerr-and-rxerr-during-bus.patch
+	patches.suse/can-hi311x-do-not-report-txerr-and-rxerr-during-bus-.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
