--- a/series.conf
+++ b/series.conf
@@ -12772,6 +12772,7 @@
 	patches.suse/drm-nouveau-fix-another-off-by-one-in-nvbios_addr.patch
 	patches.suse/drm-bridge-lt9611uxc-Cancel-only-driver-s-work.patch
 	patches.suse/drm-adv7511-override-i2c-address-of-cec-before-acces.patch
+	patches.suse/drm-bridge-adv7511-Add-check-for-mipi_dsi_driver_reg.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
