--- a/series.conf
+++ b/series.conf
@@ -12782,6 +12782,7 @@
 	patches.suse/drm-vc4-dsi-Register-dsi0-as-the-correct-vc4-encoder.patch
 	patches.suse/drm-vc4-dsi-Fix-dsi0-interrupt-support.patch
 	patches.suse/drm-vc4-dsi-Add-correct-stop-condition-to-vc4_dsi_en.patch
+	patches.suse/drm-vc4-hdmi-Reset-HDMI-MISC_CONTROL-register.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
