drm/st7735r: Fix module autoloading for Okaya RH128128T (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12767,6 +12767,7 @@
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
+	patches.suse/drm-st7735r-Fix-module-autoloading-for-Okaya-RH12812.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
