--- a/series.conf
+++ b/series.conf
@@ -12769,6 +12769,7 @@
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
 	patches.suse/drm-st7735r-Fix-module-autoloading-for-Okaya-RH12812.patch
 	patches.suse/drm-mipi-dbi-align-max_chunk-to-2-in-spi_transfer.patch
+	patches.suse/drm-nouveau-fix-another-off-by-one-in-nvbios_addr.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
