drm: adv7511: override i2c address of cec before accessing it (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12771,6 +12771,7 @@
 	patches.suse/drm-mipi-dbi-align-max_chunk-to-2-in-spi_transfer.patch
 	patches.suse/drm-nouveau-fix-another-off-by-one-in-nvbios_addr.patch
 	patches.suse/drm-bridge-lt9611uxc-Cancel-only-driver-s-work.patch
+	patches.suse/drm-adv7511-override-i2c-address-of-cec-before-acces.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
