drm/bridge: tc358767: Make sure Refclk clock are enabled (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12766,6 +12766,7 @@
 	patches.suse/can-error-specify-the-values-of-data-5.7-of-CAN-erro.patch
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
+	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
