drm/nouveau/acpi: Don't print error when we get -EINPROGRESS from pm_runtime (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12802,6 +12802,7 @@
 	patches.suse/drm-msm-mdp5-Fix-global-state-lock-backoff.patch
 	patches.suse/drm-exynos-exynos7_drm_decon-free-resources-when-clk.patch
 	patches.suse/drm-nouveau-kms-Fix-failure-path-for-creating-DP-con.patch
+	patches.suse/drm-nouveau-acpi-Don-t-print-error-when-we-get-EINPR.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
