--- a/series.conf
+++ b/series.conf
@@ -12801,6 +12801,7 @@
 	patches.suse/drm-msm-hdmi-drop-empty-none-regulator-lists.patch
 	patches.suse/drm-msm-mdp5-Fix-global-state-lock-backoff.patch
 	patches.suse/drm-exynos-exynos7_drm_decon-free-resources-when-clk.patch
+	patches.suse/drm-nouveau-kms-Fix-failure-path-for-creating-DP-con.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
