--- a/series.conf
+++ b/series.conf
@@ -12791,6 +12791,7 @@
 	patches.suse/drm-radeon-fix-incorrrect-SPDX-License-Identifiers.patch
 	patches.suse/drm-amd-display-Revert-drm-amd-display-turn-DPMS-off.patch
 	patches.suse/drm-amd-amd_shared.h-Add-missing-doc-for-PP_GFX_DCS_.patch
+	patches.suse/drm-rockchip-vop-Don-t-crash-for-invalid-duplicate_s.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
