--- a/series.conf
+++ b/series.conf
@@ -12788,6 +12788,7 @@
 	patches.suse/drm-vc4-hdmi-Correct-HDMI-timing-registers-for-inter.patch
 	patches.suse/Revert-drm-i915-Hold-reference-to-intel_context-over.patch
 	patches.suse/drm-radeon-fix-potential-buffer-overflow-in-ni_set_m.patch
+	patches.suse/drm-radeon-fix-incorrrect-SPDX-License-Identifiers.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
