drm/rockchip: Fix an error handling path rockchip_dp_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12792,6 +12792,7 @@
 	patches.suse/drm-amd-display-Revert-drm-amd-display-turn-DPMS-off.patch
 	patches.suse/drm-amd-amd_shared.h-Add-missing-doc-for-PP_GFX_DCS_.patch
 	patches.suse/drm-rockchip-vop-Don-t-crash-for-invalid-duplicate_s.patch
+	patches.suse/drm-rockchip-Fix-an-error-handling-path-rockchip_dp_.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
