--- a/series.conf
+++ b/series.conf
@@ -12803,6 +12803,7 @@
 	patches.suse/drm-exynos-exynos7_drm_decon-free-resources-when-clk.patch
 	patches.suse/drm-nouveau-kms-Fix-failure-path-for-creating-DP-con.patch
 	patches.suse/drm-nouveau-acpi-Don-t-print-error-when-we-get-EINPR.patch
+	patches.suse/drm-nouveau-Don-t-pm_runtime_put_sync-only-pm_runtim.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
