--- a/series.conf
+++ b/series.conf
@@ -12798,6 +12798,7 @@
 	patches.suse/drm-mediatek-dpi-Remove-output-format-of-YUV.patch
 	patches.suse/drm-mediatek-dpi-Only-enable-dpi-after-the-bridge-is.patch
 	patches.suse/drm-msm-hdmi-enable-core-vcc-core-vdda-supply-for-89.patch
+	patches.suse/drm-msm-hdmi-drop-empty-none-regulator-lists.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
