drm/amd/display: Enable building new display engine with KCOV enabled (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12804,6 +12804,7 @@
 	patches.suse/drm-nouveau-kms-Fix-failure-path-for-creating-DP-con.patch
 	patches.suse/drm-nouveau-acpi-Don-t-print-error-when-we-get-EINPR.patch
 	patches.suse/drm-nouveau-Don-t-pm_runtime_put_sync-only-pm_runtim.patch
+	patches.suse/drm-amd-display-Enable-building-new-display-engine-w.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
