--- a/series.conf
+++ b/series.conf
@@ -12766,6 +12766,7 @@
 	patches.suse/can-error-specify-the-values-of-data-5.7-of-CAN-erro.patch
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
+	patches.suse/i2c-npcm-Remove-own-slave-addresses-2-10.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
 	patches.suse/drm-st7735r-Fix-module-autoloading-for-Okaya-RH12812.patch
 	patches.suse/drm-mipi-dbi-align-max_chunk-to-2-in-spi_transfer.patch
