drm/vc4: hdmi: Correct HDMI timing registers for interlaced modes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12785,6 +12785,7 @@
 	patches.suse/drm-vc4-dsi-Add-correct-stop-condition-to-vc4_dsi_en.patch
 	patches.suse/drm-vc4-hdmi-Reset-HDMI-MISC_CONTROL-register.patch
 	patches.suse/drm-vc4-hdmi-Fix-timings-for-interlaced-modes.patch
+	patches.suse/drm-vc4-hdmi-Correct-HDMI-timing-registers-for-inter.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
