--- a/series.conf
+++ b/series.conf
@@ -12789,6 +12789,7 @@
 	patches.suse/Revert-drm-i915-Hold-reference-to-intel_context-over.patch
 	patches.suse/drm-radeon-fix-potential-buffer-overflow-in-ni_set_m.patch
 	patches.suse/drm-radeon-fix-incorrrect-SPDX-License-Identifiers.patch
+	patches.suse/drm-amd-display-Revert-drm-amd-display-turn-DPMS-off.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
