--- a/series.conf
+++ b/series.conf
@@ -12786,6 +12786,7 @@
 	patches.suse/i2c-npcm-Correct-slave-role-behavior.patch
 	patches.suse/i2c-npcm-Capitalize-the-one-line-comment.patch
 	patches.suse/i2c-mxs-Silence-a-clang-warning.patch
+	patches.suse/i2c-Fix-a-potential-use-after-free.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
 	patches.suse/drm-st7735r-Fix-module-autoloading-for-Okaya-RH12812.patch
 	patches.suse/drm-mipi-dbi-align-max_chunk-to-2-in-spi_transfer.patch
