--- a/series.conf
+++ b/series.conf
@@ -12775,6 +12775,7 @@
 	patches.suse/mediatek-mt76-eeprom-fix-missing-of_node_put-in-mt76.patch
 	patches.suse/wifi-p54-Fix-an-error-handling-path-in-p54spi_probe.patch
 	patches.suse/wifi-p54-add-missing-parentheses-in-p54_flush.patch
+	patches.suse/wifi-wil6210-debugfs-fix-info-leak-in-wil_write_file.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
 	patches.suse/i2c-npcm-Remove-own-slave-addresses-2-10.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
