wifi: rtw89: 8852a: rfk: fix div 0 exception (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12756,6 +12756,7 @@
 	patches.suse/ath11k-fix-netdev-open-race.patch
 	patches.suse/ath11k-Fix-incorrect-debug_mask-mappings.patch
 	patches.suse/wifi-iwlegacy-4965-fix-potential-off-by-one-overflow.patch
+	patches.suse/wifi-rtw89-8852a-rfk-fix-div-0-exception.patch
 	patches.suse/can-pch_can-do-not-report-txerr-and-rxerr-during-bus.patch
 	patches.suse/can-rcar_can-do-not-report-txerr-and-rxerr-during-bu.patch
 	patches.suse/can-sja1000-do-not-report-txerr-and-rxerr-during-bus.patch
