--- a/series.conf
+++ b/series.conf
@@ -12773,6 +12773,7 @@
 	patches.suse/mt76-mt7921-enlarge-maximum-VHT-MPDU-length-to-11454.patch
 	patches.suse/mediatek-mt76-mac80211-Fix-missing-of_node_put-in-mt.patch
 	patches.suse/mediatek-mt76-eeprom-fix-missing-of_node_put-in-mt76.patch
+	patches.suse/wifi-p54-Fix-an-error-handling-path-in-p54spi_probe.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
 	patches.suse/i2c-npcm-Remove-own-slave-addresses-2-10.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
