--- a/series.conf
+++ b/series.conf
@@ -12675,6 +12675,7 @@
 	patches.suse/macsec-fix-error-message-in-macsec_add_rxsa-and-_txs.patch
 	patches.suse/macsec-limit-replay-window-size-with-XPN.patch
 	patches.suse/macsec-always-read-MACSEC_SA_ATTR_PN-as-a-u64.patch
+	patches.suse/net-macsec-fix-potential-resource-leak-in-macsec_add.patch
 	patches.suse/Bluetooth-L2CAP-Fix-use-after-free-caused-by-l2cap_c.patch
 	patches.suse/drm-simpledrm-Fix-return-type-of-simpledrm_simple_di.patch
 	patches.suse/nouveau-svm-Fix-to-migrate-all-requested-pages.patch
