--- a/series.conf
+++ b/series.conf
@@ -12771,6 +12771,7 @@
 	patches.suse/mt76-mt76x02u-fix-possible-memory-leak-in-__mt76x02u.patch
 	patches.suse/mt76-mt7615-do-not-update-pm-stats-in-case-of-error.patch
 	patches.suse/mt76-mt7921-enlarge-maximum-VHT-MPDU-length-to-11454.patch
+	patches.suse/mediatek-mt76-mac80211-Fix-missing-of_node_put-in-mt.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
 	patches.suse/i2c-npcm-Remove-own-slave-addresses-2-10.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
