--- a/series.conf
+++ b/series.conf
@@ -12779,6 +12779,7 @@
 	patches.suse/wifi-iwlwifi-mvm-fix-double-list_add-at-iwl_mvm_mac_.patch
 	patches.suse/wifi-libertas-Fix-possible-refcount-leak-in-if_usb_p.patch
 	patches.suse/wifi-rtw88-check-the-return-value-of-alloc_workqueue.patch
+	patches.suse/wifi-wil6210-debugfs-fix-uninitialized-variable-use-.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
 	patches.suse/i2c-npcm-Remove-own-slave-addresses-2-10.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
