media: hdpvr: fix error value returns in hdpvr_read (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12791,6 +12791,7 @@
 	patches.suse/i2c-mux-gpmux-Add-of_node_put-when-breaking-out-of-l.patch
 	patches.suse/media-atmel-atmel-sama7g5-isc-fix-warning-in-configs.patch
 	patches.suse/media-tw686x-Register-the-irq-at-the-end-of-probe.patch
+	patches.suse/media-hdpvr-fix-error-value-returns-in-hdpvr_read.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
 	patches.suse/drm-st7735r-Fix-module-autoloading-for-Okaya-RH12812.patch
 	patches.suse/drm-mipi-dbi-align-max_chunk-to-2-in-spi_transfer.patch
