wifi: iwlwifi: mvm: fix double list_add at iwl_mvm_mac_wake_tx_queue (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12776,6 +12776,7 @@
 	patches.suse/wifi-p54-Fix-an-error-handling-path-in-p54spi_probe.patch
 	patches.suse/wifi-p54-add-missing-parentheses-in-p54_flush.patch
 	patches.suse/wifi-wil6210-debugfs-fix-info-leak-in-wil_write_file.patch
+	patches.suse/wifi-iwlwifi-mvm-fix-double-list_add-at-iwl_mvm_mac_.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
 	patches.suse/i2c-npcm-Remove-own-slave-addresses-2-10.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
