--- a/series.conf
+++ b/series.conf
@@ -12781,6 +12781,7 @@
 	patches.suse/wifi-rtw88-check-the-return-value-of-alloc_workqueue.patch
 	patches.suse/wifi-wil6210-debugfs-fix-uninitialized-variable-use-.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
+	patches.suse/net-rose-fix-netdev-reference-changes.patch
 	patches.suse/i2c-npcm-Remove-own-slave-addresses-2-10.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
 	patches.suse/drm-st7735r-Fix-module-autoloading-for-Okaya-RH12812.patch
