--- a/series.conf
+++ b/series.conf
@@ -12795,6 +12795,7 @@
 	patches.suse/media-v4l2-mem2mem-prevent-pollerr-when-last_buffer_.patch
 	patches.suse/media-tw686x-Fix-memory-leak-in-tw686x_video_init.patch
 	patches.suse/media-PATCH-pci-atomisp_cmd-fix-three-missing-checks.patch
+	patches.suse/media-cedrus-h265-Fix-flag-name.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
 	patches.suse/drm-st7735r-Fix-module-autoloading-for-Okaya-RH12812.patch
 	patches.suse/drm-mipi-dbi-align-max_chunk-to-2-in-spi_transfer.patch
