--- a/series.conf
+++ b/series.conf
@@ -12789,6 +12789,7 @@
 	patches.suse/i2c-Fix-a-potential-use-after-free.patch
 	patches.suse/i2c-cadence-Support-PEC-for-SMBus-block-read.patch
 	patches.suse/i2c-mux-gpmux-Add-of_node_put-when-breaking-out-of-l.patch
+	patches.suse/media-atmel-atmel-sama7g5-isc-fix-warning-in-configs.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
 	patches.suse/drm-st7735r-Fix-module-autoloading-for-Okaya-RH12812.patch
 	patches.suse/drm-mipi-dbi-align-max_chunk-to-2-in-spi_transfer.patch
