mt76: mt76x02u: fix possible memory leak in __mt76x02u_mcu_send_msg (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12768,6 +12768,7 @@
 	patches.suse/can-error-specify-the-values-of-data-5.7-of-CAN-erro.patch
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
 	patches.suse/wifi-mac80211-limit-A-MSDU-subframes-for-client-too.patch
+	patches.suse/mt76-mt76x02u-fix-possible-memory-leak-in-__mt76x02u.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
 	patches.suse/i2c-npcm-Remove-own-slave-addresses-2-10.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
