media: tw686x: Fix memory leak in tw686x_video_init (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12793,6 +12793,7 @@
 	patches.suse/media-tw686x-Register-the-irq-at-the-end-of-probe.patch
 	patches.suse/media-hdpvr-fix-error-value-returns-in-hdpvr_read.patch
 	patches.suse/media-v4l2-mem2mem-prevent-pollerr-when-last_buffer_.patch
+	patches.suse/media-tw686x-Fix-memory-leak-in-tw686x_video_init.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
 	patches.suse/drm-st7735r-Fix-module-autoloading-for-Okaya-RH12812.patch
 	patches.suse/drm-mipi-dbi-align-max_chunk-to-2-in-spi_transfer.patch
