--- a/series.conf
+++ b/series.conf
@@ -56310,6 +56310,7 @@
 	patches.suse/can-rcar_can-do-not-report-txerr-and-rxerr-during-bu.patch
 	patches.suse/can-sja1000-do-not-report-txerr-and-rxerr-during-bus.patch
 	patches.suse/can-hi311x-do-not-report-txerr-and-rxerr-during-bus-.patch
+	patches.suse/can-sun4i_can-do-not-report-txerr-and-rxerr-during-b.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
