ACPI: APEI: Better fix to avoid spamming the console with old error logs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56302,6 +56302,7 @@
 	patches.suse/netfilter-nf_queue-do-not-allow-packet-truncation-be.patch
 	patches.suse/ACPI-CPPC-Do-not-prevent-CPPC-from-working-in-the-fu.patch
 	patches.suse/bus-hisi_lpc-fix-missing-platform_device_put-in-hisi.patch
+	patches.suse/ACPI-APEI-Better-fix-to-avoid-spamming-the-console-w.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
