--- a/series.conf
+++ b/series.conf
@@ -55154,6 +55154,7 @@
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
 	patches.suse/carl9170-fix-missing-bit-wise-or-operator-for-tx_par.patch
+	patches.suse/ath10k-Fix-error-handling-in-ath10k_setup_msa_resour.patch
 	patches.suse/mac80211-fix-potential-double-free-on-mesh-join.patch
 	patches.suse/bareudp-use-ipv6_mod_enabled-to-check-if-IPv6-enable.patch
 	patches.suse/Bluetooth-btusb-Add-missing-Chicony-device-for-Realt.patch
