ath10k: do not enforce interrupt trigger type (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56305,6 +56305,7 @@
 	patches.suse/ACPI-APEI-Better-fix-to-avoid-spamming-the-console-w.patch
 	patches.suse/ACPI-video-Shortening-quirk-list-by-identifying-Clev.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
+	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
