Bluetooth: hci_intel: Add check for platform_driver_register (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56315,6 +56315,7 @@
 	patches.suse/can-kvaser_usb_leaf-do-not-report-txerr-and-rxerr-du.patch
 	patches.suse/can-usb_8dev-do-not-report-txerr-and-rxerr-during-bu.patch
 	patches.suse/can-error-specify-the-values-of-data-5.7-of-CAN-erro.patch
+	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
