can: sja1000: do not report txerr and rxerr during bus-off (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56308,6 +56308,7 @@
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
 	patches.suse/can-pch_can-do-not-report-txerr-and-rxerr-during-bus.patch
 	patches.suse/can-rcar_can-do-not-report-txerr-and-rxerr-during-bu.patch
+	patches.suse/can-sja1000-do-not-report-txerr-and-rxerr-during-bus.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
