--- a/series.conf
+++ b/series.conf
@@ -56306,6 +56306,7 @@
 	patches.suse/ACPI-video-Shortening-quirk-list-by-identifying-Clev.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
+	patches.suse/can-pch_can-do-not-report-txerr-and-rxerr-during-bus.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
