--- a/series.conf
+++ b/series.conf
@@ -56304,6 +56304,7 @@
 	patches.suse/bus-hisi_lpc-fix-missing-platform_device_put-in-hisi.patch
 	patches.suse/ACPI-APEI-Better-fix-to-avoid-spamming-the-console-w.patch
 	patches.suse/ACPI-video-Shortening-quirk-list-by-identifying-Clev.patch
+	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
