--- a/series.conf
+++ b/series.conf
@@ -56307,6 +56307,7 @@
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
 	patches.suse/can-pch_can-do-not-report-txerr-and-rxerr-during-bus.patch
+	patches.suse/can-rcar_can-do-not-report-txerr-and-rxerr-during-bu.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
