drm/mediatek: dpi: Remove output format of YUV (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56340,6 +56340,7 @@
 	patches.suse/drm-rockchip-Fix-an-error-handling-path-rockchip_dp_.patch
 	patches.suse/drm-bridge-sii8620-fix-possible-off-by-one.patch
 	patches.suse/drm-mediatek-Add-pull-down-MIPI-operation-in-mtk_dsi.patch
+	patches.suse/drm-mediatek-dpi-Remove-output-format-of-YUV.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
