drm/msm/mdp5: Fix global state lock backoff (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56343,6 +56343,7 @@
 	patches.suse/drm-mediatek-dpi-Remove-output-format-of-YUV.patch
 	patches.suse/drm-mediatek-dpi-Only-enable-dpi-after-the-bridge-is.patch
 	patches.suse/drm-msm-hdmi-enable-core-vcc-core-vdda-supply-for-89.patch
+	patches.suse/drm-msm-mdp5-Fix-global-state-lock-backoff.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
