--- a/series.conf
+++ b/series.conf
@@ -56342,6 +56342,7 @@
 	patches.suse/drm-mediatek-Add-pull-down-MIPI-operation-in-mtk_dsi.patch
 	patches.suse/drm-mediatek-dpi-Remove-output-format-of-YUV.patch
 	patches.suse/drm-mediatek-dpi-Only-enable-dpi-after-the-bridge-is.patch
+	patches.suse/drm-msm-hdmi-enable-core-vcc-core-vdda-supply-for-89.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
