--- a/series.conf
+++ b/series.conf
@@ -56321,6 +56321,7 @@
 	patches.suse/i2c-mux-gpmux-Add-of_node_put-when-breaking-out-of-l.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
 	patches.suse/drm-st7735r-Fix-module-autoloading-for-Okaya-RH12812.patch
+	patches.suse/drm-mipi-dbi-align-max_chunk-to-2-in-spi_transfer.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
