i2c: Fix a potential use after free (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56316,6 +56316,7 @@
 	patches.suse/can-usb_8dev-do-not-report-txerr-and-rxerr-during-bu.patch
 	patches.suse/can-error-specify-the-values-of-data-5.7-of-CAN-erro.patch
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
+	patches.suse/i2c-Fix-a-potential-use-after-free.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
 
 	# jejb/scsi for-next
