--- a/series.conf
+++ b/series.conf
@@ -56336,6 +56336,7 @@
 	patches.suse/drm-vc4-hdmi-Correct-HDMI-timing-registers-for-inter.patch
 	patches.suse/drm-radeon-fix-potential-buffer-overflow-in-ni_set_m.patch
 	patches.suse/drm-radeon-fix-incorrrect-SPDX-License-Identifiers.patch
+	patches.suse/drm-rockchip-vop-Don-t-crash-for-invalid-duplicate_s.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
