--- a/series.conf
+++ b/series.conf
@@ -56339,6 +56339,7 @@
 	patches.suse/drm-rockchip-vop-Don-t-crash-for-invalid-duplicate_s.patch
 	patches.suse/drm-rockchip-Fix-an-error-handling-path-rockchip_dp_.patch
 	patches.suse/drm-bridge-sii8620-fix-possible-off-by-one.patch
+	patches.suse/drm-mediatek-Add-pull-down-MIPI-operation-in-mtk_dsi.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
