--- a/series.conf
+++ b/series.conf
@@ -56318,6 +56318,7 @@
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
 	patches.suse/i2c-Fix-a-potential-use-after-free.patch
 	patches.suse/i2c-cadence-Support-PEC-for-SMBus-block-read.patch
+	patches.suse/i2c-mux-gpmux-Add-of_node_put-when-breaking-out-of-l.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
 
 	# jejb/scsi for-next
