--- a/series.conf
+++ b/series.conf
@@ -56332,6 +56332,7 @@
 	patches.suse/drm-vc4-dsi-Correct-DSI-divider-calculations.patch
 	patches.suse/drm-vc4-dsi-Correct-pixel-order-for-DSI0.patch
 	patches.suse/drm-vc4-dsi-Add-correct-stop-condition-to-vc4_dsi_en.patch
+	patches.suse/drm-vc4-hdmi-Fix-timings-for-interlaced-modes.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
