drm/mcde: Fix refcount leak in mcde_dsi_bind (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56325,6 +56325,7 @@
 	patches.suse/drm-nouveau-fix-another-off-by-one-in-nvbios_addr.patch
 	patches.suse/drm-adv7511-override-i2c-address-of-cec-before-acces.patch
 	patches.suse/drm-bridge-adv7511-Add-check-for-mipi_dsi_driver_reg.patch
+	patches.suse/drm-mcde-Fix-refcount-leak-in-mcde_dsi_bind.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
