drm/vc4: plane: Fix margin calculations for the right/bottom edges (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56328,6 +56328,7 @@
 	patches.suse/drm-mcde-Fix-refcount-leak-in-mcde_dsi_bind.patch
 	patches.suse/drm-doc-Fix-comment-typo.patch
 	patches.suse/drm-vc4-plane-Remove-subpixel-positioning-check.patch
+	patches.suse/drm-vc4-plane-Fix-margin-calculations-for-the-right-.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
