i2c: cadence: Support PEC for SMBus block read (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56317,6 +56317,7 @@
 	patches.suse/can-error-specify-the-values-of-data-5.7-of-CAN-erro.patch
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
 	patches.suse/i2c-Fix-a-potential-use-after-free.patch
+	patches.suse/i2c-cadence-Support-PEC-for-SMBus-block-read.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
 
 	# jejb/scsi for-next
