mt76: mt76x02u: fix possible memory leak in __mt76x02u_mcu_send_msg (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56325,6 +56325,7 @@
 	patches.suse/can-error-specify-the-values-of-data-5.7-of-CAN-erro.patch
 	patches.suse/can-pch_can-pch_can_error-initialize-errc-before-usi.patch
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
+	patches.suse/mt76-mt76x02u-fix-possible-memory-leak-in-__mt76x02u.patch
 	patches.suse/i2c-Fix-a-potential-use-after-free.patch
 	patches.suse/i2c-cadence-Support-PEC-for-SMBus-block-read.patch
 	patches.suse/i2c-mux-gpmux-Add-of_node_put-when-breaking-out-of-l.patch
