can: pch_can: pch_can_error(): initialize errc before using it (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56323,6 +56323,7 @@
 	patches.suse/can-kvaser_usb_leaf-do-not-report-txerr-and-rxerr-du.patch
 	patches.suse/can-usb_8dev-do-not-report-txerr-and-rxerr-during-bu.patch
 	patches.suse/can-error-specify-the-values-of-data-5.7-of-CAN-erro.patch
+	patches.suse/can-pch_can-pch_can_error-initialize-errc-before-usi.patch
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
 	patches.suse/i2c-Fix-a-potential-use-after-free.patch
 	patches.suse/i2c-cadence-Support-PEC-for-SMBus-block-read.patch
