mt7601u: add USB device ID for some versions of XiaoDu WiFi Dongle (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -51540,6 +51540,7 @@
 	patches.suse/mt76-mt7915-fix-IEEE80211_HE_PHY_CAP7_MAX_NC-for-sta.patch
 	patches.suse/rtl8xxxu-Fix-device-info-for-RTL8192EU-devices.patch
 	patches.suse/rtw88-8822c-fix-lc-calibration-timing.patch
+	patches.suse/mt7601u-add-USB-device-ID-for-some-versions-of-XiaoD.patch
 	patches.suse/iwlwifi-mvm-don-t-change-band-on-bound-PHY-contexts.patch
 	patches.suse/iwlwifi-increase-PNVM-load-timeout.patch
 	patches.suse/iwlwifi-mvm-fix-error-print-when-session-protection-.patch
