wifi: libertas: Fix possible refcount leak in if_usb_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56331,6 +56331,7 @@
 	patches.suse/wifi-p54-add-missing-parentheses-in-p54_flush.patch
 	patches.suse/wifi-wil6210-debugfs-fix-info-leak-in-wil_write_file.patch
 	patches.suse/wifi-iwlwifi-mvm-fix-double-list_add-at-iwl_mvm_mac_.patch
+	patches.suse/wifi-libertas-Fix-possible-refcount-leak-in-if_usb_p.patch
 	patches.suse/i2c-Fix-a-potential-use-after-free.patch
 	patches.suse/i2c-cadence-Support-PEC-for-SMBus-block-read.patch
 	patches.suse/i2c-mux-gpmux-Add-of_node_put-when-breaking-out-of-l.patch
