wifi: wil6210: debugfs: fix info leak in wil_write_file_wmi() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56329,6 +56329,7 @@
 	patches.suse/mediatek-mt76-mac80211-Fix-missing-of_node_put-in-mt.patch
 	patches.suse/wifi-p54-Fix-an-error-handling-path-in-p54spi_probe.patch
 	patches.suse/wifi-p54-add-missing-parentheses-in-p54_flush.patch
+	patches.suse/wifi-wil6210-debugfs-fix-info-leak-in-wil_write_file.patch
 	patches.suse/i2c-Fix-a-potential-use-after-free.patch
 	patches.suse/i2c-cadence-Support-PEC-for-SMBus-block-read.patch
 	patches.suse/i2c-mux-gpmux-Add-of_node_put-when-breaking-out-of-l.patch
