supported.conf: added drivers/net/ethernet/marvell/octeontx2/nic/otx2_ptp and 		changed all octeontx2 modules as supported (jsc#SLE-24682)

--- a/supported.conf
+++ b/supported.conf
@@ -2764,12 +2764,13 @@
 		drivers/net/ethernet/marvell/mvneta
 		drivers/net/ethernet/marvell/mvneta_bm				# armv7hl
 		drivers/net/ethernet/marvell/mvpp2/mvpp2
--		drivers/net/ethernet/marvell/octeontx2/af/octeontx2_af
--		drivers/net/ethernet/marvell/octeontx2/af/octeontx2_mbox
--		drivers/net/ethernet/marvell/octeontx2/af/rvu_af
+		drivers/net/ethernet/marvell/octeontx2/af/octeontx2_af
+		drivers/net/ethernet/marvell/octeontx2/af/octeontx2_mbox
+		drivers/net/ethernet/marvell/octeontx2/af/rvu_af
 		drivers/net/ethernet/marvell/octeontx2/af/rvu_mbox
--		drivers/net/ethernet/marvell/octeontx2/nic/rvu_nicpf
--		drivers/net/ethernet/marvell/octeontx2/nic/rvu_nicvf
+		drivers/net/ethernet/marvell/octeontx2/nic/rvu_nicpf
+		drivers/net/ethernet/marvell/octeontx2/nic/rvu_nicvf
+		drivers/net/ethernet/marvell/octeontx2/nic/otx2_ptp
 -		drivers/net/ethernet/marvell/prestera/prestera
 -		drivers/net/ethernet/marvell/prestera/prestera_pci
 		drivers/net/ethernet/marvell/pxa168_eth				# armv7hl
