fix race between exit_itimers() and /proc/pid/timers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12246,6 +12246,7 @@
 	patches.suse/dmaengine-lgm-Fix-an-error-handling-path-in-intel_ld.patch
 	patches.suse/dt-bindings-dma-allwinner-sun50i-a64-dma-Fix-min-max.patch
 	patches.suse/ida-don-t-use-BUG_ON-for-debugging.patch
+	patches.suse/fix-race-between-exit_itimers-and-proc-pid-timers.patch
 	patches.suse/x86-kvm-vmx-Make-noinstr-clean.patch
 	patches.suse/x86-cpufeatures-Move-RETPOLINE-flags-to-word-11.patch
 	patches.suse/x86-retpoline-Cleanup-some-ifdefery.patch
