dmaengine: sf-pdma: Add multithread support for a DMA channel (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12947,6 +12947,7 @@
 	patches.suse/clk-qcom-clk-rcg2-Make-sure-to-not-write-d-0-to-the-.patch
 	patches.suse/clk-qcom-gcc-msm8939-Fix-weird-field-spacing-in-ftbl.patch
 	patches.suse/dmaengine-stm32-mdma-Remove-dead-code-in-stm32_mdma_.patch
+	patches.suse/dmaengine-sf-pdma-Add-multithread-support-for-a-DMA-.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
