clk: qcom: gcc-msm8939: Fix weird field spacing in ftbl_gcc_camss_cci_clk (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12945,6 +12945,7 @@
 	patches.suse/clk-qcom-camcc-sm8250-Fix-topology-around-titan_top-.patch
 	patches.suse/clk-qcom-clk-rcg2-Fail-Duty-Cycle-configuration-if-M.patch
 	patches.suse/clk-qcom-clk-rcg2-Make-sure-to-not-write-d-0-to-the-.patch
+	patches.suse/clk-qcom-gcc-msm8939-Fix-weird-field-spacing-in-ftbl.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
