clk: qcom: gcc-msm8939: Add missing SYSTEM_MM_NOC_BFDCD_CLK_SRC (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12933,6 +12933,7 @@
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
 	patches.suse/clk-qcom-clk-krait-unlock-spin-after-mux-completion.patch
+	patches.suse/clk-qcom-gcc-msm8939-Add-missing-SYSTEM_MM_NOC_BFDCD.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
