clk: qcom: clk-rcg2: Fail Duty-Cycle configuration if MND divider is not enabled (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12943,6 +12943,7 @@
 	patches.suse/clk-qcom-ipq8074-set-BRANCH_HALT_DELAY-flag-for-UBI-.patch
 	patches.suse/clk-qcom-camcc-sdm845-Fix-topology-around-titan_top-.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-topology-around-titan_top-.patch
+	patches.suse/clk-qcom-clk-rcg2-Fail-Duty-Cycle-configuration-if-M.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
