memstick/ms_block: Fix a memory leak (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13041,6 +13041,7 @@
 	patches.suse/mmc-mxcmmc-Silence-a-clang-warning.patch
 	patches.suse/mmc-renesas_sdhi-Get-the-reset-handle-early-in-the-p.patch
 	patches.suse/memstick-ms_block-Fix-some-incorrect-memory-allocati.patch
+	patches.suse/memstick-ms_block-Fix-a-memory-leak.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
